fix: update the docker image to have python packages preinstalled before running the notebook

--- a/issues_clustering_experimentor.ipynb
+++ b/issues_clustering_experimentor.ipynb
@@ -7,23 +7,7 @@
     "tags": []
    },
    "source": [
-    "## Install required packages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b51e8359-4197-4c14-aec8-7395cc97c57f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install psycopg2-binary\n",
-    "# referencing code samples in https://towardsdatascience.com/elbow-method-is-not-sufficient-to-find-best-k-in-k-means-clustering-fc820da0631d#:~:text=The%20elbow%20method%20is%20a,cluster%20and%20the%20cluster%20centroid.\n",
-    "!pip --version\n",
-    "\n",
-    "!pip install -r requirements.txt"
+    "referencing code samples in https://towardsdatascience.com/elbow-method-is-not-sufficient-to-find-best-k-in-k-means-clustering-fc820da0631d#:~:text=The%20elbow%20method%20is%20a,cluster%20and%20the%20cluster%20centroid.\n"
    ]
   },
   {
