--- a/score_classification-logistic-regression.ipynb
+++ b/score_classification-logistic-regression.ipynb
@@ -19,45 +19,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a3e312b-7ed1-4eb4-90e8-7bdc89440b12",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## Install required packages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "292d14ef-37c6-4456-b861-6aea2a254e64",
-   "metadata": {},
-   "source": [
-    "This script was based on the article below:\n",
-    "https://medium.com/@knoldus/how-to-find-correlation-value-of-categorical-variables-23de7e7a9e26\n",
-    "\n",
-    "I should add a reference for this\n",
-    "\n",
-    "\"It calculates the correlation/strength-of-association of features in the data-set with both categorical and continuous features using: Pearson’s R for continuous-continuous cases, Correlation Ratio for categorical-continuous cases, Cramer’s V or Theil’s U for categorical-categorical cases.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b51e8359-4197-4c14-aec8-7395cc97c57f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install psycopg2-binary\n",
-    "!pip --version\n",
-    "\n",
-    "!pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e9491380-e3e1-4212-8c19-03ee0a491a07",
    "metadata": {
     "tags": []
@@ -68,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "284f13a5-123e-4236-9570-e5371ddc3abb",
    "metadata": {
     "tags": []
@@ -94,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36c4c0ed-1301-47c6-a13e-3402dd9a2c1d",
    "metadata": {
     "tags": []
@@ -158,12 +119,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a993605c-1c68-4d75-b71e-9ad00f36d875",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n",
+      "start test Logistic Regression to test 5 Vs All\n",
+      "Total records in dataset 747\n",
+      "{'C': 1.0, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 100, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'lbfgs', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n",
+      "5 Vs All - Without DA features\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.61      0.72        70\n",
+      "           1       0.80      0.95      0.86       111\n",
+      "\n",
+      "    accuracy                           0.82       181\n",
+      "   macro avg       0.84      0.78      0.79       181\n",
+      "weighted avg       0.83      0.82      0.81       181\n",
+      "\n",
+      "{'C': 1.0, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 100, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'lbfgs', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n",
+      "5 Vs All - With DA features (%)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.69      0.74        70\n",
+      "           1       0.82      0.89      0.85       111\n",
+      "\n",
+      "    accuracy                           0.81       181\n",
+      "   macro avg       0.81      0.79      0.80       181\n",
+      "weighted avg       0.81      0.81      0.81       181\n",
+      "\n",
+      "{'C': 1.0, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 100, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'lbfgs', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n",
+      "5 Vs All - With DA features (counts)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      0.59      0.70        70\n",
+      "           1       0.78      0.95      0.86       111\n",
+      "\n",
+      "    accuracy                           0.81       181\n",
+      "   macro avg       0.83      0.77      0.78       181\n",
+      "weighted avg       0.82      0.81      0.80       181\n",
+      "\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
     "cycle_test('Logistic Regression',fit_and_test,pre_processor=pre_process,test_type=TestType.FIVE_VS_ALL)"
    ]
