chor: cleanup notebooks

--- a/score_classification-NB.ipynb
+++ b/score_classification-NB.ipynb
@@ -46,15 +46,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import math as math\n",
-    "from dython.nominal import associations\n",
-    "from dython.nominal import correlation_ratio\n",
-    "from dython.data_utils import split_hist\n",
     "\n",
+    "import pandas as pd\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n"
    ]
@@ -76,10 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from classifiers.testing import cycle_test,TestType,TestInputs,DatasetFeatures\n",
+    "from classifiers.testing import cycle_test,TestType,TestInputs\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from pandas.api.types import CategoricalDtype\n"
+    "from sklearn.preprocessing import MinMaxScaler\n"
    ]
   },
   {
