--- a/score_classification-OLR-stepwise.ipynb
+++ b/score_classification-OLR-stepwise.ipynb
@@ -44,11 +44,10 @@
    },
    "outputs": [],
    "source": [
-    "from classifiers.testing import cycle_test,TestType,TestInputs,DatasetFeatures\n",
-    "import classifiers.ml_dataset_preparation as mdp \n",
+    "\n",
     "from pandas.api.types import CategoricalDtype\n",
-    "import patsy\n",
-    "import pandas as pd\n",
+    "\n",
+    "import classifiers.ml_dataset_preparation as mdp\n",
     "\n",
     "score_category = CategoricalDtype(categories=[0, 1, 2], ordered=True)"
    ]
@@ -71,8 +70,7 @@
    "outputs": [],
    "source": [
     "from statsmodels.miscmodels.ordinal_model import OrderedModel\n",
-    "from sklearn.preprocessing import MinMaxScaler,StandardScaler\n",
-    "import operator\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "features = ['utr_assignee_open_close','utr_assignee_inform','utr_assignee_user_mention','utr_assignee_resolution',\n",
     "            'utr_assignee_technical','utr_assignee_investigation','utr_assignee_assignment_update','utr_assignee_reminder','utr_assignee_status_update',\n",
@@ -109,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "import statsmodels.api as sm\n",
+    "\n",
     "import pandas as pd"
    ]
   },
