--- a/scored_issue_features_correlation.ipynb
+++ b/scored_issue_features_correlation.ipynb
@@ -33,17 +33,12 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import math as math\n",
-    "from dython.nominal import associations\n",
-    "from dython.nominal import correlation_ratio\n",
-    "from dython.data_utils import split_hist\n",
+    "import seaborn as sns\n",
     "\n",
-    "\n",
-    "pd.set_option('display.max_columns', None)\n"
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -63,7 +58,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exploration.scores import Correlation\n",
     "import classifiers.ml_dataset_preparation as dp\n",
     "\n",
     "issues_df = pd.read_csv('./temp_data/scored_issues_snapshots_w2v_cls.csv', index_col=[\"idx\"])\n",
