--- a/projects_clustering_experimentor.ipynb
+++ b/projects_clustering_experimentor.ipynb
@@ -33,12 +33,11 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "from preprocessing.projects import ProjectsPreProcess\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from yellowbrick.cluster import KElbowVisualizer\n",
     "from yellowbrick.cluster import SilhouetteVisualizer\n",
-    "\n",
-    "from preprocessing.ProjectsPreProcess import ProjectsPreProcess\n",
     "\n",
     "pd.set_option('display.max_columns', None)"
    ]
