fix: required fixes after moving to a new dev env

--- a/score_classification-NB.ipynb
+++ b/score_classification-NB.ipynb
@@ -30,7 +30,6 @@
    "cell_type": "markdown",
    "id": "e9491380-e3e1-4212-8c19-03ee0a491a07",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "284f13a5-123e-4236-9570-e5371ddc3abb",
    "metadata": {
     "tags": []
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6e36278e-1525-4524-aac7-cea514884173",
    "metadata": {},
    "outputs": [],
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a1558b83-fca0-464f-b832-8c1cb6ccb1ce",
    "metadata": {},
    "outputs": [],
@@ -111,36 +110,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4bd5cc86-2302-4899-b285-db8899dbb68a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n",
+      "start test Gaussian Naive Bayes to test 5 Vs All\n",
+      "Total records in dataset 747\n",
+      "total records in learning dataset 747\n",
+      "total number of records in learning 603\n",
+      "5 Vs All - Without DA features\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.57      0.68        70\n",
+      "           5       0.77      0.93      0.84       111\n",
+      "\n",
+      "    accuracy                           0.79       181\n",
+      "   macro avg       0.80      0.75      0.76       181\n",
+      "weighted avg       0.80      0.79      0.78       181\n",
+      "\n",
+      "5 Vs All - With DA features (%)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.59      0.68        70\n",
+      "           5       0.78      0.91      0.84       111\n",
+      "\n",
+      "    accuracy                           0.78       181\n",
+      "   macro avg       0.79      0.75      0.76       181\n",
+      "weighted avg       0.79      0.78      0.78       181\n",
+      "\n",
+      "total records in learning dataset 747\n",
+      "total number of records in learning 603\n",
+      "5 Vs All - With DA features (counts)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.61      0.73        70\n",
+      "           5       0.80      0.95      0.87       111\n",
+      "\n",
+      "    accuracy                           0.82       181\n",
+      "   macro avg       0.85      0.78      0.80       181\n",
+      "weighted avg       0.84      0.82      0.81       181\n",
+      "\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
     "cycle_test('Gaussian Naive Bayes',build_and_test,test_type=TestType.FIVE_VS_ALL, drop_categories=True, add_dummies=True, pre_processor=pre_process)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8c97d6aa-9ae7-4802-9533-731aa29ee5aa",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n",
+      "start test Gaussian Naive Bayes to test Three Levels\n",
+      "Total records in dataset 747\n",
+      "total records in learning dataset 747\n",
+      "total number of records in learning 603\n",
+      "Three Levels - Without DA features\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.67      0.21      0.32        28\n",
+      "           1       0.45      0.55      0.49        42\n",
+      "           2       0.82      0.89      0.85       111\n",
+      "\n",
+      "    accuracy                           0.71       181\n",
+      "   macro avg       0.65      0.55      0.56       181\n",
+      "weighted avg       0.71      0.71      0.69       181\n",
+      "\n",
+      "Three Levels - With DA features (%)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.62      0.29      0.39        28\n",
+      "           1       0.46      0.64      0.53        42\n",
+      "           2       0.86      0.85      0.85       111\n",
+      "\n",
+      "    accuracy                           0.71       181\n",
+      "   macro avg       0.65      0.59      0.59       181\n",
+      "weighted avg       0.73      0.71      0.71       181\n",
+      "\n",
+      "total records in learning dataset 747\n",
+      "total number of records in learning 603\n",
+      "Three Levels - With DA features (counts)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.60      0.32      0.42        28\n",
+      "           1       0.43      0.45      0.44        42\n",
+      "           2       0.82      0.90      0.86       111\n",
+      "\n",
+      "    accuracy                           0.71       181\n",
+      "   macro avg       0.62      0.56      0.57       181\n",
+      "weighted avg       0.70      0.71      0.69       181\n",
+      "\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
     "cycle_test('Gaussian Naive Bayes',build_and_test,test_type=TestType.THREE_LEVELS,drop_categories=True, add_dummies=True,pre_processor=pre_process)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "716d6dcd-1972-41aa-966c-013f1746b500",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n",
+      "start test Gaussian Naive Bayes to test All classes\n",
+      "Total records in dataset 747\n",
+      "total records in learning dataset 747\n",
+      "total number of records in learning 603\n",
+      "All classes - Without DA features\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.33      0.06      0.10        18\n",
+      "           2       0.22      0.40      0.29        10\n",
+      "           3       0.09      0.55      0.16        20\n",
+      "           4       0.17      0.27      0.21        22\n",
+      "           5       0.75      0.03      0.05       111\n",
+      "\n",
+      "    accuracy                           0.14       181\n",
+      "   macro avg       0.31      0.26      0.16       181\n",
+      "weighted avg       0.54      0.14      0.10       181\n",
+      "\n",
+      "All classes - With DA features (%)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.25      0.06      0.09        18\n",
+      "           2       0.25      0.50      0.33        10\n",
+      "           3       0.17      0.50      0.25        20\n",
+      "           4       0.17      0.32      0.22        22\n",
+      "           5       0.98      0.50      0.66       111\n",
+      "\n",
+      "    accuracy                           0.43       181\n",
+      "   macro avg       0.36      0.37      0.31       181\n",
+      "weighted avg       0.68      0.43      0.49       181\n",
+      "\n",
+      "total records in learning dataset 747\n",
+      "total number of records in learning 603\n",
+      "All classes - With DA features (counts)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.14      0.06      0.08        18\n",
+      "           2       0.12      0.20      0.15        10\n",
+      "           3       0.19      0.25      0.22        20\n",
+      "           4       0.21      0.64      0.32        22\n",
+      "           5       0.97      0.57      0.72       111\n",
+      "\n",
+      "    accuracy                           0.47       181\n",
+      "   macro avg       0.33      0.34      0.30       181\n",
+      "weighted avg       0.66      0.47      0.52       181\n",
+      "\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
     "cycle_test('Gaussian Naive Bayes',build_and_test,test_type=TestType.ALL,drop_categories=True, add_dummies=True,pre_processor=pre_process)"
    ]
