--- a/score_classification-logistic-regression.ipynb
+++ b/score_classification-logistic-regression.ipynb
@@ -29,19 +29,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "284f13a5-123e-4236-9570-e5371ddc3abb",
    "metadata": {
     "tags": []
    },
+   "outputs": [],
    "source": [
     "from classifiers.testing import cycle_test,TestType,TestInputs,DatasetFeatures\n",
     "\n",
     "rfe_n_features_without_text_tone = 9 # done\n",
     "rfe_n_features_with_text_tone_as_perentages = 21 # done\n",
     "rfe_n_features_with_text_tone_as_count = 10"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,10 +55,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "36c4c0ed-1301-47c6-a13e-3402dd9a2c1d",
    "metadata": {
     "tags": []
    },
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.feature_selection import RFE\n",
@@ -105,9 +107,7 @@
     "    # Print the selected features\n",
     "    features_in = [inputs.x_train.columns[i] for i,b in enumerate(rfe.support_) if b == True]\n",
     "    return fit_and_test_sklearn(inputs, features_in)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,15 +119,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "a993605c-1c68-4d75-b71e-9ad00f36d875",
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n",
+      "start test Logistic Regression to test 5 Vs All\n",
+      "Total records in dataset 747\n",
+      "total records in learning dataset 747\n",
+      "total number of records in learning 603\n",
+      "{'C': 1.0, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 100, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'lbfgs', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n",
+      "5 Vs All - Without DA features\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.61      0.72        70\n",
+      "           1       0.80      0.95      0.86       111\n",
+      "\n",
+      "    accuracy                           0.82       181\n",
+      "   macro avg       0.84      0.78      0.79       181\n",
+      "weighted avg       0.83      0.82      0.81       181\n",
+      "\n",
+      "{'C': 1.0, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 100, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'lbfgs', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n",
+      "5 Vs All - With DA features (%)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.70      0.77        70\n",
+      "           1       0.83      0.92      0.87       111\n",
+      "\n",
+      "    accuracy                           0.83       181\n",
+      "   macro avg       0.84      0.81      0.82       181\n",
+      "weighted avg       0.84      0.83      0.83       181\n",
+      "\n",
+      "total records in learning dataset 747\n",
+      "total number of records in learning 603\n",
+      "{'C': 1.0, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 100, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'lbfgs', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n",
+      "5 Vs All - With DA features (counts)\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      0.59      0.70        70\n",
+      "           1       0.78      0.95      0.86       111\n",
+      "\n",
+      "    accuracy                           0.81       181\n",
+      "   macro avg       0.83      0.77      0.78       181\n",
+      "weighted avg       0.82      0.81      0.80       181\n",
+      "\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
     "cycle_test('Logistic Regression',fit_and_test,pre_processor=pre_process,test_type=TestType.FIVE_VS_ALL)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
